--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "npm run update-sitemap && vite build",
+    "preview": "vite preview",
+    "update-sitemap": "node scripts/update-sitemap.js",
+    "watch-sitemap": "node scripts/update-sitemap.js --watch"
   },
   "dependencies": {
     "react": "^19.2.0",
